Final adjust to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,58 @@
-# GeneXus Generated
+############################################
+# GeneXus Databases
+############################################
 GX_KB_*.mdf
 GX_KB_*.ldf
+*.mdf
+*.ldf
+
+############################################
+# GeneXus Internal / Generated
+############################################
 FTIndex/
 Locks/
+GXSPC*/
 *.cfs
 *.del
 *.ari
 *.spc
+*.lst
+*.bak
+
+############################################
+# GeneXus Workspace
+############################################
 *.workspace
 
-TestResults.xml
-GXSPC*/
+############################################
+# GeneXus .NET Generator Output
+############################################
+CloudNET*/
+*/CloudNET*/
+build/
+*/build/
 
-# Build folders
+############################################
+# .NET / Visual Studio
+############################################
 bin/
 obj/
-
-# Visual Studio
 .vs/
+*.user
+*.suo
+*.cache
+*.dll
+*.exe
+*.pdb
+
+############################################
+# Test / Logs
+############################################
+TestResults.xml
+*.log
+
+############################################
+# OS Files
+############################################
+.DS_Store
+Thumbs.db
